--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+    background-image: url('../assets/porsche-nature.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
